updated and restructured the swagger server:  - implemented byte string conversion for images  - divided file loading and image return in different functions  - training is now performed in another thread  - improved storage class
