# swagger_server/models/image.py
@@ -12,26 +12,26 @@ class Image(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, data: List[str]=None, id: int=None):
+    def __init__(self, bytestring: str=None, id: int=None):
         """
         Image - a model defined in Swagger
 
-        :param data: The data of this Image.
-        :type data: List[str]
+        :param bytestring: The bytestring of this Image.
+        :type bytestring: str
         :param id: The id of this Image.
         :type id: int
         """
         self.swagger_types = {
-            'data': List[str],
+            'bytestring': str,
             'id': int
         }
 
         self.attribute_map = {
-            'data': 'data',
+            'bytestring': 'bytestring',
             'id': 'id'
         }
 
-        self._data = data
+        self._bytestring = bytestring
         self._id = id
 
     @classmethod
@@ -47,25 +47,25 @@ class Image(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def data(self) -> List[str]:
+    def bytestring(self) -> str:
         """
-        Gets the data of this Image.
+        Gets the bytestring of this Image.
 
-        :return: The data of this Image.
-        :rtype: List[str]
+        :return: The bytestring of this Image.
+        :rtype: str
         """
-        return self._data
+        return self._bytestring
 
-    @data.setter
-    def data(self, data: List[str]):
+    @bytestring.setter
+    def bytestring(self, bytestring: str):
         """
-        Sets the data of this Image.
+        Sets the bytestring of this Image.
 
-        :param data: The data of this Image.
-        :type data: List[str]
+        :param bytestring: The bytestring of this Image.
+        :type bytestring: str
         """
 
-        self._data = data
+        self._bytestring = bytestring
 
     @property
     def id(self) -> int:
